--- a/index.html
+++ b/index.html
@@ -1,39 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dr. Palazzo Calculator</title>
-    <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Calculator</title>
+    <link rel="stylesheet" href="style.css" />
 </head>
 <body>
     <div class="calculator">
-        <input type="text" id="display" disabled>
+        <div class="display" id="display">0</div>
         <div class="buttons">
-            <button>7</button>
-            <button>8</button>
-            <button>9</button>
-            <button>&divide;</button>
+            <button class="operator" data-value="+">+</button>
+            <button class="operator" data-value="-">−</button>
+            <button class="operator" data-value="*">×</button>
+            <button class="operator" data-value="/">÷</button>
 
-            <button>4</button>
-            <button>5</button>
-            <button>6</button>
-            <button>&times;</button>
+            <button class="number" data-value="7">7</button>
+            <button class="number" data-value="8">8</button>
+            <button class="number" data-value="9">9</button>
+            <button class="clear">C</button>
 
-            <button>1</button>
-            <button>2</button>
-            <button>3</button>
-            <button>-</button>
+            <button class="number" data-value="4">4</button>
+            <button class="number" data-value="5">5</button>
+            <button class="number" data-value="6">6</button>
+            <button class="equals">=</button>
 
-            <button>0</button>
-            <button>.</button>
-            <button>=</button>
-            <button>+</button>
-
-            <button id="clear">C</button>
+            <button class="number" data-value="1">1</button>
+            <button class="number" data-value="2">2</button>
+            <button class="number" data-value="3">3</button>
+            <button class="number" data-value="0">0</button>
+            <button class="number" data-value=".">.</button>
         </div>
     </div>
 
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
 </body>
 </html>
