a working update of the js version

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <div class="wrap fade-in">
     <header class="header">
       <!-- Replace src with your image file (keep it in the same folder or update the path) -->
-      <img src="your-image.png" alt="Dr. Palazzo" class="avatar" />
+      <img src="./palazzo image.jpg" alt="Dr. Palazzo" class="avatar" />
       <div class="title">
         <h1>Dr. Palazzo’s Calculator</h1>
         <p class="subtitle">#codewithdrpalazzo</p>
